apps/settings/css/settings.scss
/* ... */
.clientsbox img {
	height: 60px;
}

#sslCertificate {
	tr.expired {
		background-color: rgba(255, 0, 0, 0.5);
	}

	td {
		padding: 5px;
	}
}

#displaynameerror,
#displaynamechanged {
	display: none;
}

input#identity {
	width: 20em;
}

#showWizard {
	display: inline-block;
}

.msg {
	&.success {
		color: #fff;
		background-color: #47a447;
		padding: 3px;
	}

	&.error {
		color: #fff;
		background-color: #d2322d;
		padding: 3px;
	}
}


table.nostyle {
	label {
		margin-right: 2em;
	}

	td {
		padding: 0.2em 0;
	}
}

#security-password {
	#passwordform {
		display: flex;
		flex-wrap: wrap;
		flex-direction: column;
		gap: 1rem;
		.input-control {
			display: flex;
			flex-wrap: wrap;
			flex-direction: column;
			label {
				margin-bottom: 0.5rem;
			}
		}

		#pass1, .personal-show-container {
			flex-shrink: 1;
			width: 300px;
			min-width: 150px;
		}

		// Extremely fragile code, to be replaced by PasswordField component soon
		.personal-show-container {
			#pass2 {
				position: relative;
				top: 0.5rem;
			}
			.personal-show-label {
				top: 34px !important;
				margin-right: 0;
				margin-top: 0 !important;
				right: 3px;
			}
		}

		#pass2 {
			width: 100%;
		}

		.password-state {
			display: inline-block;
		}

		.strengthify-wrapper {
			position: absolute;
			left: 0;
			width: 100%;
			border-radius: 0 0 2px 2px;
			margin-top: 5px;
			overflow: hidden;
			height: 3px;
		}
	}
}

/* Two-Factor Authentication (2FA) */

#two-factor-auth {
	h3 {
		margin-top: 24px;
	}

	li > div {
		margin-left: 20px;
	}

	.two-factor-provider-settings-icon {
		width: 16px;
		height: 16px;
		vertical-align: sub;
		filter: var(--background-invert-if-dark);
	}
}

/* USERS */

.isgroup {
	.groupname {
		width: 85%;
		display: block;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	&.active .groupname {
		width: 65%;
	}
}

li.active {
	.delete,
	.rename {
		display: block;
	}
}

.app-navigation-entry-utils {
	.delete,
	.rename {
		display: none;
	}
}

#usersearchform {
	position: absolute;
	top: 2px;
	right: 0;

	input {
		width: 150px;
	}

	label {
		font-weight: bold;
	}
}

/* display table at full width */
table.grid {
	width: 100%;

	th {
		height: 2em;
		padding: 0 1em 0 0;
		border-bottom: 1px solid var(--color-border);
		text-align: left;
		font-weight: normal;
	}

	td {
		border-bottom: 1px solid var(--color-border);
		padding: 0 1em 0 0;
		text-align: left;
		font-weight: normal;
	}
}

td, th {
	&.name {
		padding-left: .8em;
		min-width: 5em;
		max-width: 12em;
		text-overflow: ellipsis;
		overflow: hidden;
	}

	&.password {
		padding-left: .8em;

		> img {
			visibility: hidden;
		}
	}

	&.displayName > img {
		visibility: hidden;
	}

	&.password,
	&.mailAddress {
		min-width: 5em;
		max-width: 12em;
		cursor: pointer;

		span {
			width: 90%;
			display: inline-block;
			text-overflow: ellipsis;
			overflow: hidden;
		}
	}

	&.mailAddress {
		cursor: pointer;
	}

	&.password > span {
		margin-right: 1.2em;
		color: #C7C7C7;
	}
}

span.usersLastLoginTooltip {
	white-space: nowrap;
}

/* SETTINGS NAVIGATION */
#app-navigation {
	/* Navigation icons */
	img {
		margin-bottom: -3px;
		margin-right: 6px;
		width: 16px;
	}

	li span.no-icon {
		padding-left: 32px;
	}

	ul li.active > span.utils {
		.delete, .rename {
			display: block;
		}
	}
}

/* SETTINGS SECTIONS */
.section {
	margin-bottom: 0;
	/* section divider lines, none needed for last one */
	&:not(:last-child) {
		border-bottom: 1px solid var(--color-border);
	}

	/* correctly display help icons next to headings */
	h2 {
		margin-bottom: 22px;

		.icon-info {
			padding: 6px 20px;
			vertical-align: text-bottom;
			display: inline-block;
		}
	}
}

/* LOG */
#log {
	white-space: normal;
	margin-bottom: 14px;
}

#lessLog {
	display: none;
}

table.grid td.date {
	white-space: nowrap;
}

#log-section p {
	margin-top: 20px;
}

#security-warning-state-ok,
#security-warning-state-warning,
#security-warning-state-failure,
#security-warning-state-loading {
	span {
		vertical-align: middle;

		&.message {
			padding: 12px;
		}

		&.icon {
			width: 32px;
			height: 32px;
			background-position: center center;
			display: inline-block;
			border-radius: 50%;
		}

		&.icon-checkmark-white {
			background-color: var(--color-success);
		}

		&.icon-error-white {
			background-color: var(--color-warning);
		}

		&.icon-close-white {
			background-color: var(--color-error);
		}
	}
}

#shareAPI {
	&.loading > div {
		display: none;
	}

	p {
		padding-bottom: 0.8em;
	}

	.indent {
		padding-left: 28px;
	}

	.double-indent {
		padding-left: 56px;
	}

	.nocheckbox {
		padding-left: 20px;
	}

	#s2id_linksExcludedGroups {
		width: 200px !important;
	}
}

#shareApiDefaultPermissionsSection label {
	margin-right: 20px;
}

#fileSharingSettings h3 {
	display: inline-block;
}

#publicShareDisclaimerText {
	width: calc(100% - 23px);
	/* 20 px left margin, 3 px right margin */
	max-width: 600px;
	height: 150px;
	margin-left: 20px;
	box-sizing: border-box;
}

/* correctly display help icons next to headings */

.icon-info {
	padding: 11px 20px;
	vertical-align: text-bottom;
	opacity: .5;
}

#two-factor-auth h2,
#shareAPI h2,
#mail_general_settings h2 {
	display: inline-block;
}

.mail_settings p {
	label:first-child {
		display: inline-block;
		width: 300px;
		text-align: right;
	}

	select:nth-child(2),
	input:not([type='button']) {
		width: 143px;
	}
}

@media (max-width: calc(variables.$breakpoint-mobile * 0.75)) {
	.mail_settings p label:first-child {
		width: unset;
		text-align: left;
		display: block;
		margin-top: calc(var(--default-grid-baseline) * 2);
	}
}

#mail_smtpport {
	width: 60px;
}

.cronlog {
	margin-left: 10px;
}

.status {
	display: inline-block;
	height: 16px;
	width: 16px;
	vertical-align: text-bottom;

	&.success {
		border-radius: 50%;
	}
}

#selectGroups select {
	box-sizing: border-box;
	display: inline-block;
	height: 36px;
	padding: 7px 10px;
}

#log .log-message {
	word-break: break-all;
	min-width: 180px;
}
/* ... */

